--- a/styles/scss/components/_blog-card.scss
+++ b/styles/scss/components/_blog-card.scss
@@ -3,6 +3,10 @@
 	border: 0.125rem solid #e8eaf2;
 }
 
+.card-blog:hover {
+	box-shadow: 0.5rem 0.5rem 1.25rem 0rem rgba(67, 67, 67, 0.2);
+}
+
 .card-blog--bg-black {
 	background-color: $color-black;
 	color: $color-white;
